Clean up Java build script output